--- a/tool-usage/Intro.html
+++ b/tool-usage/Intro.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../learn-language/Intro.html"><strong aria-hidden="true">1.</strong> 语言学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Chapter1.html"><strong aria-hidden="true">1.1.</strong> JS</a></li><li class="chapter-item expanded "><a href="../learn-language/Chapter2.html"><strong aria-hidden="true">1.2.</strong> SQL</a></li></ol></li><li class="chapter-item expanded "><a href="../tool-usage/Intro.html" class="active"><strong aria-hidden="true">2.</strong> 工具使用</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">2.1.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">2.2.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">2.3.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">3.</strong> 网页搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">3.1.</strong> mdbook</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../learn-language/Intro.html"><strong aria-hidden="true">1.</strong> 语言学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Chapter1.html"><strong aria-hidden="true">1.1.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="../tool-usage/Intro.html" class="active"><strong aria-hidden="true">2.</strong> 工具使用</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">2.1.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">2.2.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">2.3.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">3.</strong> 网页搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">3.1.</strong> mdbook</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -179,7 +179,7 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../learn-language/Chapter2.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../learn-language/Chapter1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -193,7 +193,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../learn-language/Chapter2.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../learn-language/Chapter1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
