--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="learn-language/Intro.html"><strong aria-hidden="true">1.</strong> 语言学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Chapter1.html"><strong aria-hidden="true">1.1.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">2.</strong> 工具使用</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">2.1.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">2.2.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">2.3.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">3.</strong> 网页搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">3.1.</strong> mdbook</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="learn-language/Intro.html"><strong aria-hidden="true">1.</strong> 学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Chapter1.html"><strong aria-hidden="true">1.1.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">2.1.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">2.2.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">2.3.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">3.2.</strong> react</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,7 +175,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="language-learn"><a class="header" href="#language-learn">language learn</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="language-learn-1"><a class="header" href="#language-learn-1">language learn</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="tool-use"><a class="header" href="#tool-use">tool use</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="git-use"><a class="header" href="#git-use">Git use</a></h1>
 <h2 id="一安装-git"><a class="header" href="#一安装-git">一.安装 Git</a></h2>
 <pre><code class="language-sh">https://git-scm.com/downloads
@@ -248,8 +248,10 @@ git commit -m &quot;First commit&quot;
 <pre><code class="language-sh">    docker pull [选项] [Docker Registry 地址[:端口号]/]仓库名[:标签]
 </code></pre>
 <ol start="2">
-<li></li>
+<li>使用 Docker 镜像</li>
 </ol>
+<pre><code class="language-sh">
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="wireguard-use"><a class="header" href="#wireguard-use">wireguard use</a></h1>
 <h2 id="一安装-wireguard"><a class="header" href="#一安装-wireguard">一.安装 wireguard</a></h2>
 <h3 id="在服务端安装"><a class="header" href="#在服务端安装">在服务端安装</a></h3>
@@ -375,8 +377,63 @@ wg-quick up wg0
 #关闭wg0
 wg-quick down wg0
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="language-learn-2"><a class="header" href="#language-learn-2">language learn</a></h1>
-<div style="break-before: page; page-break-before: always;"></div>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="build"><a class="header" href="#build">build</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="mdbook"><a class="header" href="#mdbook">mdbook</a></h1>
+<ol>
+<li>安装 mdbook</li>
+</ol>
+<p><a href="https://github.com/rust-lang/mdBook/releases">下载链接</a></p>
+<ol start="2">
+<li>配置 mdbook 环境</li>
+</ol>
+<p>配置你的下载文件到环境变量中<code>Path</code>路径中</p>
+<ol start="3">
+<li>安装 vscode 预览插件</li>
+</ol>
+<p>vscode 拓展中下载</p>
+<ul>
+<li>
+<p>Markdown All in One</p>
+</li>
+<li>
+<p>Markdown Preview Enhanced</p>
+</li>
+</ul>
+<ol start="4">
+<li>mdbook 编译和预览</li>
+</ol>
+<ul>
+<li>编译 mdbook</li>
+</ul>
+<pre><code class="language-sh">mdbook build
+</code></pre>
+<pre><code class="language-sh">mdbook build -o
+</code></pre>
+<p>-预览 mdbook</p>
+<pre><code class="language-sh">mdbook watch -o
+</code></pre>
+<p>mdbook 会自动编译项目，无需手动编译</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="react"><a class="header" href="#react">react</a></h1>
+<ol>
+<li>安装 node.js</li>
+</ol>
+<pre><code class="language-sh">https://nodejs.org/en
+</code></pre>
+<ol start="2">
+<li>搭建 React 脚手架</li>
+</ol>
+<pre><code class="language-sh">npx create-react-app my-react-app
+
+</code></pre>
+<ol start="3">
+<li>启动本地开发服务器</li>
+</ol>
+<pre><code class="language-sh">npm start
+</code></pre>
+<ol start="4">
+<li>项目初始化</li>
+</ol>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
