--- a/learn-language/Intro.html
+++ b/learn-language/Intro.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../learn-language/Intro.html" class="active"><strong aria-hidden="true">1.</strong> 学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Chapter1.html"><strong aria-hidden="true">1.1.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="../tool-usage/Intro.html"><strong aria-hidden="true">2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter4.html"><strong aria-hidden="true">2.4.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter2.html"><strong aria-hidden="true">3.2.</strong> react</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Intro.html" class="active"><strong aria-hidden="true">1.1.</strong> 学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Markdown</a></li><li class="chapter-item expanded "><a href="../learn-language/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="../tool-usage/Intro.html"><strong aria-hidden="true">1.2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">1.3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> react</a></li></ol></li><li class="chapter-item expanded "><a href="../Raspberry Pi/Intro.html"><strong aria-hidden="true">1.4.</strong> 树莓派</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Raspberry Pi/Chapter1.html"><strong aria-hidden="true">1.4.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="../Raspberry Pi/Chapter2.html"><strong aria-hidden="true">1.4.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="../Raspberry Pi/Chapter3.html"><strong aria-hidden="true">1.4.3.</strong> Git</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -179,6 +179,9 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../Intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
                             <a rel="next prefetch" href="../learn-language/Chapter1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
@@ -190,6 +193,9 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../Intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
                     <a rel="next prefetch" href="../learn-language/Chapter1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
