--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="learn-language/Intro.html"><strong aria-hidden="true">1.</strong> 学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Chapter1.html"><strong aria-hidden="true">1.1.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">2.4.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">3.2.</strong> react</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Intro.html"><strong aria-hidden="true">1.1.</strong> 学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Markdown</a></li><li class="chapter-item expanded "><a href="learn-language/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> wireguard</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> react</a></li></ol></li><li class="chapter-item expanded "><a href="Raspberry Pi/Intro.html"><strong aria-hidden="true">1.4.</strong> 树莓派</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Raspberry Pi/Chapter1.html"><strong aria-hidden="true">1.4.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="Raspberry Pi/Chapter2.html"><strong aria-hidden="true">1.4.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="Raspberry Pi/Chapter3.html"><strong aria-hidden="true">1.4.3.</strong> Git</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -174,7 +174,121 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="language-learn"><a class="header" href="#language-learn">language learn</a></h1>
+                        <h1 id="我的笔记"><a class="header" href="#我的笔记">我的笔记</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="language-learn"><a class="header" href="#language-learn">language learn</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="markdown"><a class="header" href="#markdown">markdown</a></h1>
+<p>Markdown是一种可以使用普通文本编辑器编写的标记语言，通过简单的标记语法，它可以使普通文本内容具有一定的格式。</p>
+<ol>
+<li>编辑器的使用</li>
+</ol>
+<p><code>vscode</code>或者<code>typora</code></p>
+<p><a href="https://typora.io/">typora</a>免费的markdown专用编辑器
+2. 插件安装</p>
+<pre><code class="language-sh">Markdown shortcuts
+Auto-Open Markdown Preview
+Markdown All in One
+</code></pre>
+<h2 id="markdown常用语法"><a class="header" href="#markdown常用语法">markdown常用语法</a></h2>
+<ol>
+<li>标题</li>
+</ol>
+<p>使用 # 号可表示 1-6 级标题</p>
+<pre><code class="language-markdown"># 一级标题
+
+## 二级标题
+
+### 三级标题
+...
+</code></pre>
+<ol start="2">
+<li>段落</li>
+</ol>
+<ul>
+<li>字体</li>
+</ul>
+<pre><code class="language-markdown">*斜体文字*
+
+**粗体文字**
+
+***粗斜体文字***
+</code></pre>
+<ul>
+<li>分割线</li>
+</ul>
+<pre><code class="language-markdown">------
+</code></pre>
+<hr />
+<ul>
+<li>删除线</li>
+</ul>
+<pre><code class="language-markdown">~~Delete~~
+</code></pre>
+<p><del>Delete</del></p>
+<ul>
+<li>下划线</li>
+</ul>
+<pre><code class="language-markdown">&lt;u&gt;text&lt;/u&gt;
+</code></pre>
+<p><u>text</u></p>
+<ul>
+<li>脚注</li>
+</ul>
+<pre><code class="language-markdown">[^text]：
+</code></pre>
+<p><sup class="footnote-reference"><a href="#text">1</a></sup>：脚注</p>
+<ol start="3">
+<li>列表</li>
+</ol>
+<ul>
+<li>无序列表</li>
+</ul>
+<pre><code class="language-markdown">- 第一项
+- 第二项
+- 第三项
+</code></pre>
+<ul>
+<li>有序列表</li>
+</ul>
+<pre><code class="language-markdown">1. 第一项
+2. 第二项
+3. 第三项
+</code></pre>
+<ul>
+<li>列表嵌套</li>
+</ul>
+<pre><code class="language-markdown">1. 第一项：
+    - 第一项嵌套的第一个元素
+    - 第一项嵌套的第二个元素
+</code></pre>
+<ol start="4">
+<li>代码框</li>
+</ol>
+<pre><code class="language-markdown">```python
+print('Markdown')
+    def test():
+        print('Markdown test!')
+</code></pre>
+<pre><code class="language-javascript">$(document).read(function(){
+    alert('Markdown');
+});
+</code></pre>
+<ol start="5">
+<li>链接</li>
+</ol>
+<pre><code class="language-markdown">[链接名称](链接地址)
+</code></pre>
+<ul>
+<li>高级链接</li>
+</ul>
+<pre><code class="language-markdown">[Markdown][markdown]
+[markdown]: http://www.markdown.com
+</code></pre>
+<ol start="6">
+<li>图片</li>
+</ol>
+<pre><code class="language-markdown">![alt 属性文本](图片地址)
+![alt 属性文本](图片地址 &quot;可选标题&quot;)
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="tool-use"><a class="header" href="#tool-use">tool use</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="powershell"><a class="header" href="#powershell">Powershell</a></h1>
 <h2 id="一开启-powershell"><a class="header" href="#一开启-powershell">一.开启 powershell</a></h2>
@@ -262,7 +376,14 @@
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="git-use"><a class="header" href="#git-use">Git use</a></h1>
 <h2 id="一安装-git"><a class="header" href="#一安装-git">一.安装 Git</a></h2>
-<pre><code class="language-sh">https://git-scm.com/downloads
+<ol>
+<li>官网下载</li>
+</ol>
+<p><a href="https://git-scm.com/downloads">git</a></p>
+<ol start="2">
+<li>终端下载</li>
+</ol>
+<pre><code class="language-sh">winget install --id Git.Git -e --source winget
 </code></pre>
 <h2 id="二配置-git"><a class="header" href="#二配置-git">二.配置 Git</a></h2>
 <p>在 powershell 中输入<code>git</code>检测是否配置完成</p>
@@ -338,10 +459,49 @@ git commit -m &quot;First commit&quot;
 </ul>
 <pre><code class="language-sh">git log
 </code></pre>
+<ul>
+<li>回退到上一个版本</li>
+</ul>
+<pre><code class="language-sh">git reset --hard HEAD^     
+</code></pre>
+<ul>
+<li>回退到上上个版本</li>
+</ul>
+<pre><code class="language-sh">git reset --hard HEAD^^   
+</code></pre>
+<ul>
+<li>回退到指定版本</li>
+</ul>
+<pre><code class="language-sh">git reset --hard HEAD^^   
+</code></pre>
+<ul>
+<li>分支相关的操作</li>
+</ul>
+<pre><code class="language-sh">git branch ##查看分支     
+
+git branch &lt;name&gt; ##创建分支      
+
+git checkout &lt;name&gt; ##切换分支        
+
+git checkout -b &lt;name&gt; ##创建+切换分支      
+
+git merge &lt;name&gt; ##合并某分支到当前分支     
+
+git merge --no-ff -m &quot;...&quot; &lt;name&gt; ##使用普通模式合并分支，可以显示合并历史       
+
+git branch (-m | -M) &lt;oldbranch&gt; &lt;newbranch&gt; ##重命名分支      
+
+git branch -d &lt;name&gt; ##删除分支       
+
+git branch -D &lt;name&gt; ##强行删除未合并分支
+
+git log --graph ##查看分支合并图     
+
+git log --graph --pretty=oneline --abbrev-commit ##也可以查看分支合并图     
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="docker-use"><a class="header" href="#docker-use">Docker use</a></h1>
 <h2 id="一docker-下载"><a class="header" href="#一docker-下载">一.Docker 下载</a></h2>
-<pre><code class="language-sh">https://docs.docker.com/desktop/install/
-</code></pre>
+<p><a href="https://docs.docker.com/desktop/install/">docker</a></p>
 <pre><code class="language-sh">https://hub.docker.com/
 </code></pre>
 <h2 id="二镜像"><a class="header" href="#二镜像">二.镜像</a></h2>
@@ -486,7 +646,7 @@ wg-quick down wg0
 <ol>
 <li>安装 mdbook</li>
 </ol>
-<p><a href="https://github.com/rust-lang/mdBook/releases">下载链接</a></p>
+<p><a href="https://github.com/rust-lang/mdBook/releases">mdbook</a></p>
 <ol start="2">
 <li>配置 mdbook 环境</li>
 </ol>
@@ -537,6 +697,33 @@ wg-quick down wg0
 <ol start="4">
 <li>项目初始化</li>
 </ol>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="树莓派"><a class="header" href="#树莓派">树莓派</a></h1>
+<ol>
+<li>安装 Raspberry Pi Imager</li>
+</ol>
+<pre><code class="language-sh">https://www.raspberrypi.com/software/
+</code></pre>
+<ol start="2">
+<li>使用ssh远程服务</li>
+</ol>
+<p>开启 SSH 服务，设置 username and password，配置 WiFi </p>
+<ul>
+<li>用户名<code>user</code> </li>
+<li>密码<code>password</code></li>
+</ul>
+<ol start="3">
+<li>固件升级</li>
+</ol>
+<pre><code class="language-sh">sudo apt update
+sudo apt full-upgrade
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="linux常用命令"><a class="header" href="#linux常用命令">linux常用命令</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="vim"><a class="header" href="#vim">vim</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="git"><a class="header" href="#git">git</a></h1>
+<h2 id="下载git"><a class="header" href="#下载git">下载git</a></h2>
+<pre><code class="language-sh">sudo apt update
+sudo apt install git
+</code></pre>
 
                     </main>
 
