deploy: 3155c23df1c44f16204024db3ccece4550e030d0

--- a/print.html
+++ b/print.html
@@ -182,8 +182,10 @@
 <li>编辑器的使用</li>
 </ol>
 <p><code>vscode</code>或者<code>typora</code></p>
-<p><a href="https://typora.io/">typora</a>免费的markdown专用编辑器
-2. 插件安装</p>
+<p><a href="https://typora.io/">typora</a>付费的markdown专用编辑器</p>
+<ol start="2">
+<li>插件安装</li>
+</ol>
 <pre><code class="language-sh">Markdown shortcuts
 Auto-Open Markdown Preview
 Markdown All in One
@@ -289,7 +291,19 @@ print('Markdown')
 <pre><code class="language-markdown">![alt 属性文本](图片地址)
 ![alt 属性文本](图片地址 &quot;可选标题&quot;)
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="tool-use"><a class="header" href="#tool-use">tool use</a></h1>
+<ol start="7">
+<li>表格</li>
+</ol>
+<pre><code class="language-markdown">| 表头   | 表头   |
+| ------ | ------ |
+| 单元格 | 单元格 |
+| 单元格 | 单元格 |
+</code></pre>
+<div class="table-wrapper"><table><thead><tr><th>表头</th><th>表头</th></tr></thead><tbody>
+<tr><td>单元格</td><td>单元格</td></tr>
+<tr><td>单元格</td><td>单元格</td></tr>
+</tbody></table>
+</div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="tool-use"><a class="header" href="#tool-use">tool use</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="powershell"><a class="header" href="#powershell">Powershell</a></h1>
 <h2 id="一开启-powershell"><a class="header" href="#一开启-powershell">一.开启 powershell</a></h2>
 <ol>
