deploy: d94edd98cd8a72e3f6b1cfcecf533bed99ea4ece

--- a/print.html
+++ b/print.html
@@ -766,7 +766,93 @@ wg-quick down wg0
 <pre><code class="language-sh">sudo apt update
 sudo apt full-upgrade
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="linux常用命令"><a class="header" href="#linux常用命令">linux常用命令</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="linux"><a class="header" href="#linux">linux</a></h1>
+<h2 id="常用命令"><a class="header" href="#常用命令">常用命令</a></h2>
+<ul>
+<li>列出当前目录下文件</li>
+</ul>
+<pre><code class="language-sh">ls
+</code></pre>
+<ul>
+<li>输出当前目录</li>
+</ul>
+<pre><code class="language-sh">pwd
+</code></pre>
+<ul>
+<li>改变目录</li>
+</ul>
+<pre><code class="language-sh">cd 
+</code></pre>
+<ul>
+<li>新建目录</li>
+</ul>
+<pre><code class="language-sh">mkdir
+</code></pre>
+<ul>
+<li>显示文件内容</li>
+</ul>
+<pre><code class="language-sh">cat
+</code></pre>
+<ul>
+<li>删除目录</li>
+</ul>
+<pre><code class="language-sh">rm
+</code></pre>
+<ul>
+<li>移动目录</li>
+</ul>
+<pre><code class="language-sh">mv
+</code></pre>
+<ul>
+<li>复制目录</li>
+</ul>
+<pre><code class="language-sh">cp
+</code></pre>
+<ul>
+<li>显示在终端输入内容</li>
+</ul>
+<pre><code class="language-sh">echo
+</code></pre>
+<ul>
+<li>读取系统时间</li>
+</ul>
+<pre><code class="language-sh">date
+</code></pre>
+<ul>
+<li>全面搜索正则表达式</li>
+</ul>
+<pre><code class="language-sh">grep
+</code></pre>
+<ul>
+<li>显示命令使用手册</li>
+</ul>
+<pre><code class="language-sh">man
+</code></pre>
+<ul>
+<li>以root权限执行</li>
+</ul>
+<pre><code class="language-sh">sudo
+</code></pre>
+<ul>
+<li>运行</li>
+</ul>
+<pre><code class="language-sh">./program
+</code></pre>
+<ul>
+<li>安装软件包</li>
+</ul>
+<pre><code class="language-sh">apt-get
+</code></pre>
+<ul>
+<li>退出</li>
+</ul>
+<pre><code class="language-sh">exit
+</code></pre>
+<ul>
+<li>重新启动</li>
+</ul>
+<pre><code class="language-sh">reboot
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="vim"><a class="header" href="#vim">vim</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="git"><a class="header" href="#git">git</a></h1>
 <h2 id="下载git"><a class="header" href="#下载git">下载git</a></h2>
