--- a/print.html
+++ b/print.html
@@ -381,6 +381,11 @@ print('Markdown')
 </ol>
 <pre><code class="language-sh">code .
 </code></pre>
+<ol start="7">
+<li>清空回收站</li>
+</ol>
+<pre><code class="language-sh">clear-RecycleBin -Force
+</code></pre>
 <h2 id="三-常用命令"><a class="header" href="#三-常用命令">三. 常用命令</a></h2>
 <h3 id="环境变量"><a class="header" href="#环境变量">环境变量</a></h3>
 <ol>
