deploy: 5d7cab6195e6c96e245262d6fef3a01c37135f1e

--- a/print.html
+++ b/print.html
@@ -364,17 +364,17 @@ print('Markdown')
 <ol start="3">
 <li>创建新文件</li>
 </ol>
-<pre><code class="language-sh">ni -ItemType Directory -Path &lt;FolderPath&gt;
+<pre><code class="language-sh">mkdir
 </code></pre>
 <ol start="4">
 <li>删除文件</li>
 </ol>
-<pre><code class="language-sh">rm &lt;FilePath&gt;
+<pre><code class="language-sh">rm
 </code></pre>
 <ol start="5">
 <li>移动文件</li>
 </ol>
-<pre><code class="language-sh">mv &lt;SourcePath&gt; &lt;DestinationPath&gt;
+<pre><code class="language-sh">mv
 </code></pre>
 <ol start="6">
 <li>使用 vscode 打开文件</li>
