deploy: 208a7aaacaebb2a5478fe9e5be648f6c3754ba4d

--- a/print.html
+++ b/print.html
@@ -553,6 +553,10 @@ git branch -D &lt;name&gt; ##强行删除未合并分支
 git log --graph ##查看分支合并图
 
 git log --graph --pretty=oneline --abbrev-commit ##也可以查看分支合并图
+
+git tag &lt;num&gt;
+
+git push --tags
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
 <h2 id="一docker-下载"><a class="header" href="#一docker-下载">一.Docker 下载</a></h2>
