--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Intro.html"><strong aria-hidden="true">1.1.</strong> 学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Markdown</a></li><li class="chapter-item expanded "><a href="learn-language/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.2.5.</strong> vim</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="Raspberry Pi/Intro.html"><strong aria-hidden="true">1.4.</strong> 树莓派</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Raspberry Pi/Chapter1.html"><strong aria-hidden="true">1.4.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="Raspberry Pi/Chapter2.html"><strong aria-hidden="true">1.4.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="Raspberry Pi/Chapter3.html"><strong aria-hidden="true">1.4.3.</strong> Git</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Intro.html"><strong aria-hidden="true">1.1.</strong> 语言</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Markdown</a></li><li class="chapter-item expanded "><a href="learn-language/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.2.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.2.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.4.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.4.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.4.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.4.3.</strong> Git</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -177,12 +177,12 @@
                         <h1 id="我的笔记"><a class="header" href="#我的笔记">我的笔记</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="language-learn"><a class="header" href="#language-learn">language learn</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="markdown"><a class="header" href="#markdown">markdown</a></h1>
-<p>Markdown是一种可以使用普通文本编辑器编写的标记语言，通过简单的标记语法，它可以使普通文本内容具有一定的格式。</p>
+<p>Markdown 是一种可以使用普通文本编辑器编写的标记语言，通过简单的标记语法，它可以使普通文本内容具有一定的格式。</p>
 <ol>
 <li>编辑器的使用</li>
 </ol>
-<p><code>vscode</code>或者<code>typora</code></p>
-<p><a href="https://typora.io/">typora</a>付费的markdown专用编辑器</p>
+<p><code>vscode</code>或者 <code>typora</code></p>
+<p><a href="https://typora.io/">typora</a>付费的 markdown 专用编辑器</p>
 <ol start="2">
 <li>插件安装</li>
 </ol>
@@ -190,7 +190,7 @@
 Auto-Open Markdown Preview
 Markdown All in One
 </code></pre>
-<h2 id="markdown常用语法"><a class="header" href="#markdown常用语法">markdown常用语法</a></h2>
+<h2 id="markdown-常用语法"><a class="header" href="#markdown-常用语法">markdown 常用语法</a></h2>
 <ol>
 <li>标题</li>
 </ol>
@@ -200,6 +200,7 @@ Markdown All in One
 ## 二级标题
 
 ### 三级标题
+
 ...
 </code></pre>
 <ol start="2">
@@ -208,16 +209,16 @@ Markdown All in One
 <ul>
 <li>字体</li>
 </ul>
-<pre><code class="language-markdown">*斜体文字*
+<pre><code class="language-markdown">_斜体文字_
 
 **粗体文字**
 
-***粗斜体文字***
+**_粗斜体文字_**
 </code></pre>
 <ul>
 <li>分割线</li>
 </ul>
-<pre><code class="language-markdown">------
+<pre><code class="language-markdown">---
 </code></pre>
 <hr />
 <ul>
@@ -231,7 +232,7 @@ Markdown All in One
 </ul>
 <pre><code class="language-markdown">&lt;u&gt;text&lt;/u&gt;
 </code></pre>
-<p><u>text</u></p>
+<p><code>&lt;u&gt;</code>text<code>&lt;/u&gt;</code></p>
 <ul>
 <li>脚注</li>
 </ul>
@@ -259,8 +260,8 @@ Markdown All in One
 <li>列表嵌套</li>
 </ul>
 <pre><code class="language-markdown">1. 第一项：
-    - 第一项嵌套的第一个元素
-    - 第一项嵌套的第二个元素
+   - 第一项嵌套的第一个元素
+   - 第一项嵌套的第二个元素
 </code></pre>
 <ol start="4">
 <li>代码框</li>
@@ -269,9 +270,10 @@ Markdown All in One
 print('Markdown')
     def test():
         print('Markdown test!')
+```
 </code></pre>
-<pre><code class="language-javascript">$(document).read(function(){
-    alert('Markdown');
+<pre><code class="language-javascript">$(document).read(function () {
+  alert(&quot;Markdown&quot;);
 });
 </code></pre>
 <ol start="5">
@@ -560,10 +562,42 @@ git push --tags
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
 <h2 id="一docker-下载"><a class="header" href="#一docker-下载">一.Docker 下载</a></h2>
-<p><a href="https://docs.docker.com/desktop/install/">docker</a></p>
-<pre><code class="language-sh">https://hub.docker.com/
+<p>windows:<a href="https://docs.docker.com/desktop/install/">docker</a></p>
+<p>ubuntu:</p>
+<pre><code class="language-sh"> curl -fsSL https://test.docker.com -o test-docker.sh
+ sudo sh test-docker.sh
 </code></pre>
-<h2 id="二镜像"><a class="header" href="#二镜像">二.镜像</a></h2>
+<p><a href="https://hub.docker.com/">dockerhub</a></p>
+<p>Docker 允许你在容器内运行应用程序， 使用 docker run 命令来在容器内运行一个应用程序。</p>
+<p>输出 Hello world</p>
+<h2 id="二-常用命令"><a class="header" href="#二-常用命令">二. 常用命令</a></h2>
+<p>启动一个容器:</p>
+<pre><code class="language-sh">docker run -d -p 80:80 --name webserver nginx
+</code></pre>
+<p>列出正在运行的容器：</p>
+<pre><code class="language-sh">docker ps
+</code></pre>
+<p>停止一个容器：</p>
+<pre><code class="language-sh">docker stop &lt;CONTAINER_ID&gt;
+</code></pre>
+<p>启动一个停止的容器：</p>
+<pre><code class="language-sh">docker start &lt;CONTAINER_ID&gt;
+</code></pre>
+<p>删除一个容器：</p>
+<pre><code class="language-sh">docker rm &lt;CONTAINER_ID&gt;
+</code></pre>
+<p>列出所有镜像：</p>
+<pre><code class="language-sh">docker images
+</code></pre>
+<p>从 Docker Hub 拉取镜像：</p>
+<pre><code class="language-sh">docker pull &lt;IMAGE_NAME&gt;
+</code></pre>
+<p>删除一个镜像：</p>
+<pre><code class="language-sh">docker rmi &lt;IMAGE_ID&gt;
+</code></pre>
+<p>查看容器日志：</p>
+<pre><code class="language-sh">docker logs &lt;CONTAINER_ID&gt;
+</code></pre>
 <h3 id="获取镜像"><a class="header" href="#获取镜像">获取镜像</a></h3>
 <ol>
 <li>从 Docker 镜像仓库获取镜像</li>
@@ -573,7 +607,7 @@ git push --tags
 <ol start="2">
 <li>使用 Docker 镜像</li>
 </ol>
-<pre><code class="language-sh">
+<pre><code class="language-sh">docker run httpd
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="wireguard"><a class="header" href="#wireguard">wireguard</a></h1>
 <h2 id="一安装-wireguard"><a class="header" href="#一安装-wireguard">一.安装 wireguard</a></h2>
@@ -703,15 +737,18 @@ wg-quick down wg0
 <div style="break-before: page; page-break-before: always;"></div><h1 id="vim"><a class="header" href="#vim">Vim</a></h1>
 <h2 id="下载"><a class="header" href="#下载">下载</a></h2>
 <p>vim:<a href="https://www.vim.org/download.php">下载链接</a></p>
+<pre><code class="language-sh">winget search vim
+winget install vim.vim
+</code></pre>
 <h2 id="vim-键盘图"><a class="header" href="#vim-键盘图">vim 键盘图</a></h2>
 <p><img src="tool-usage/./images/vim.png" alt="vim graphical cheat sheet" /></p>
 <h2 id="命令模式"><a class="header" href="#命令模式">命令模式</a></h2>
 <ul>
 <li>
-<p><code>i</code>:切换到输入模式 </p>
+<p><code>i</code>:切换到输入模式</p>
 </li>
 <li>
-<p><code>x</code>:删除字符 </p>
+<p><code>x</code>:删除字符</p>
 </li>
 <li>
 <p><code>:</code>:切换到底线命令模式</p>
@@ -729,7 +766,7 @@ wg-quick down wg0
 <p><code>:w</code>:保存文件</p>
 </li>
 <li>
-<p><code>:q</code>:退出vim编辑器</p>
+<p><code>:q</code>:退出 vim 编辑器</p>
 </li>
 <li>
 <p><code> :q!</code>:强制退出</p>
@@ -744,6 +781,45 @@ wg-quick down wg0
 <h2 id="输入模式"><a class="header" href="#输入模式">输入模式</a></h2>
 <p>输入时比较符合直觉</p>
 <p><code>ESC</code>:退出输入模式</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="qbittorent"><a class="header" href="#qbittorent">qBittorent</a></h1>
+<h2 id="安装-qbittorent"><a class="header" href="#安装-qbittorent">安装 qBittorent</a></h2>
+<p>Ubuntu 或者 Debian:</p>
+<pre><code class="language-sh">apt install -y qbittorrent-nox
+</code></pre>
+<p>CentOS:</p>
+<pre><code class="language-sh">yum install -y qbittorrent-nox
+</code></pre>
+<h2 id="启动"><a class="header" href="#启动">启动</a></h2>
+<p>安装完成后启动 qBittorrent：</p>
+<pre><code class="language-sh">qbittorrent-nox
+</code></pre>
+<p>访问地址、用户名、密码：</p>
+<pre><code class="language-sh">******** Information ********
+To control qBittorrent, access the Web UI at http://localhost:8080
+The Web UI administrator user name is: admin
+The Web UI administrator password is still the default one: adminadmin
+This is a security risk, please consider changing your password from program preferences
+</code></pre>
+<p>让 qBittorrent 启动后在后台运行可以输入：</p>
+<pre><code class="language-sh">qbittorrent-nox -d
+</code></pre>
+<h2 id="常用命令"><a class="header" href="#常用命令">常用命令</a></h2>
+<p>启动 qBittorrent：</p>
+<pre><code class="language-sh">qbittorrent-nox
+</code></pre>
+<p>在后台启动 qBittorrent：</p>
+<pre><code class="language-sh">qbittorrent-nox -d
+</code></pre>
+<p>查看版本：</p>
+<pre><code class="language-sh">qbittorrent-nox -v
+</code></pre>
+<p>启动 qBittorrent 并指定 Web 面板的端口：</p>
+<pre><code class="language-sh">qbittorrent-nox --webui-port=2333
+</code></pre>
+<p>上面指定 2333 端口。</p>
+<p>查看帮助：</p>
+<pre><code class="language-sh">qbittorrent-nox -h
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="build"><a class="header" href="#build">build</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="mdbook"><a class="header" href="#mdbook">mdbook</a></h1>
 <ol>
@@ -800,45 +876,9 @@ wg-quick down wg0
 <ol start="4">
 <li>项目初始化</li>
 </ol>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="qbittorent"><a class="header" href="#qbittorent">qBittorent</a></h1>
-<h2 id="安装-qbittorent"><a class="header" href="#安装-qbittorent">安装 qBittorent</a></h2>
-<p>Ubuntu 或者 Debian:</p>
-<pre><code class="language-sh">apt install -y qbittorrent-nox
-</code></pre>
-<p>CentOS:</p>
-<pre><code class="language-sh">yum install -y qbittorrent-nox
-</code></pre>
-<h2 id="启动"><a class="header" href="#启动">启动</a></h2>
-<p>安装完成后启动 qBittorrent：</p>
-<pre><code class="language-sh">qbittorrent-nox
-</code></pre>
-<p>访问地址、用户名、密码：</p>
-<pre><code class="language-sh">******** Information ********
-To control qBittorrent, access the Web UI at http://localhost:8080
-The Web UI administrator user name is: admin
-The Web UI administrator password is still the default one: adminadmin
-This is a security risk, please consider changing your password from program preferences
-</code></pre>
-<p>让 qBittorrent 启动后在后台运行可以输入：</p>
-<pre><code class="language-sh">qbittorrent-nox -d
-</code></pre>
-<h2 id="常用命令"><a class="header" href="#常用命令">常用命令</a></h2>
-<p>启动 qBittorrent：</p>
-<pre><code class="language-sh">qbittorrent-nox
-</code></pre>
-<p>在后台启动 qBittorrent：</p>
-<pre><code class="language-sh">qbittorrent-nox -d
-</code></pre>
-<p>查看版本：</p>
-<pre><code class="language-sh">qbittorrent-nox -v
-</code></pre>
-<p>启动 qBittorrent 并指定 Web 面板的端口：</p>
-<pre><code class="language-sh">qbittorrent-nox --webui-port=2333
-</code></pre>
-<p>上面指定 2333 端口。</p>
-<p>查看帮助：</p>
-<pre><code class="language-sh">qbittorrent-nox -h
-</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="openwrt"><a class="header" href="#openwrt">openwrt</a></h1>
+<h2 id="安装镜像"><a class="header" href="#安装镜像">安装镜像</a></h2>
+<p><a href="https://openwrt.ai/?target=x86%2F64&amp;id=generic">镜像站</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="树莓派"><a class="header" href="#树莓派">树莓派</a></h1>
 <ol>
 <li>安装 Raspberry Pi Imager</li>
