--- a/linux/Intro.html
+++ b/linux/Intro.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>vim - notes</title>
+        <title>linux - notes</title>
 
 
         <!-- Custom HTML head -->
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Intro.html"><strong aria-hidden="true">1.1.</strong> 学习</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Markdown</a></li><li class="chapter-item expanded "><a href="../learn-language/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="../tool-usage/Intro.html"><strong aria-hidden="true">1.2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter5.html"><strong aria-hidden="true">1.2.5.</strong> vim</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">1.3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> react</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="../Raspberry Pi/Intro.html"><strong aria-hidden="true">1.4.</strong> 树莓派</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Raspberry Pi/Chapter1.html"><strong aria-hidden="true">1.4.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="../Raspberry Pi/Chapter2.html" class="active"><strong aria-hidden="true">1.4.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="../Raspberry Pi/Chapter3.html"><strong aria-hidden="true">1.4.3.</strong> Git</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Intro.html"><strong aria-hidden="true">1.1.</strong> 语言</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../learn-language/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Markdown</a></li><li class="chapter-item expanded "><a href="../learn-language/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="../tool-usage/Intro.html"><strong aria-hidden="true">1.2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tool-usage/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter5.html"><strong aria-hidden="true">1.2.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="../tool-usage/Chapter6.html"><strong aria-hidden="true">1.2.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="../web-develop/Intro.html"><strong aria-hidden="true">1.3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../web-develop/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> react</a></li><li class="chapter-item expanded "><a href="../web-develop/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="../linux/Intro.html" class="active"><strong aria-hidden="true">1.4.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../linux/Chapter1.html"><strong aria-hidden="true">1.4.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="../linux/Chapter2.html"><strong aria-hidden="true">1.4.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="../linux/Chapter3.html"><strong aria-hidden="true">1.4.3.</strong> Git</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,17 +173,36 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="vim"><a class="header" href="#vim">vim</a></h1>
+                        <h1 id="树莓派"><a class="header" href="#树莓派">树莓派</a></h1>
+<ol>
+<li>安装 Raspberry Pi Imager</li>
+</ol>
+<pre><code class="language-sh">https://www.raspberrypi.com/software/
+</code></pre>
+<ol start="2">
+<li>使用ssh远程服务</li>
+</ol>
+<p>开启 SSH 服务，设置 username and password，配置 WiFi </p>
+<ul>
+<li>用户名<code>user</code> </li>
+<li>密码<code>password</code></li>
+</ul>
+<ol start="3">
+<li>固件升级</li>
+</ol>
+<pre><code class="language-sh">sudo apt update
+sudo apt full-upgrade
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../Raspberry Pi/Chapter1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../web-develop/Chapter3.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../Raspberry Pi/Chapter3.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../linux/Chapter1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,11 +212,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../Raspberry Pi/Chapter1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../web-develop/Chapter3.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../Raspberry Pi/Chapter3.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../linux/Chapter1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
